Adjust the list of default build devices

--- a/.github/workflows/rebuild-armbian.yml
+++ b/.github/workflows/rebuild-armbian.yml
@@ -26,7 +26,7 @@ on:
           - vplus_tqc-a01_tanix-tx6
           - a311d
           - s922x
-          - s922x-n2
+          - s922x-reva
           - s922x-ct2000
           - s905x3
           - s905x3-b
