--- a/build-armbian/armbian-files/common-files/etc/model_database.conf
+++ b/build-armbian/armbian-files/common-files/etc/model_database.conf
@@ -14,11 +14,12 @@
 # 1.ID  2.MODEL  3.SOC  4.FDTFILE  5.UBOOT_OVERLOAD  6.MAINLINE_UBOOT  7.BOOTLOADER_IMG  8.KERNEL_BRANCH  9.PLATFORM  10.FAMILY  11.BOOT_CONF 12.BOARD  13.BUILD
 # [ Column 5 ]: called <UBOOT_OVERLOAD> in Amlogic, <TRUST_IMG> in Rockchip, Not used in Allwinner.
 # [ 8.KERNEL_BRANCH ] is the directory name of https://github.com/ophub/kernel/tree/main/pub/
-#                     [ rk3588 ] : rk3588/5.10.y : used for Rockchip rk3588 series devices
-#                     [ 6.x.y  ] : stable/6.x.y  : used for Rockchip rk3399/rk3568 series devices
-#                     [ 5.15.y ] : stable/5.15.y : used for Amlogic series devices without UBOOT_OVERLOAD
-#                     [ 5.10.y ] : stable/5.10.y : used for Allwinner H6 TQC-A01 and other devices
-#                     [ stable ] : stable/*      : used for all devices
+#                     [ rk3588 ] = [ rk3588/*      ] : used for Rockchip rk3588 series devices
+#                     [ h6     ] = [ h6/*          ] : used for Allwinner h6 series devices
+#                     [ stable ] = [ stable/*      ] : used for all devices
+#                     [ 5.10.y ] = [ stable/5.10.y ] : used for all devices
+#                     [ 5.15.y ] = [ stable/5.15.y ] : used for all devices, Amlogic (without UBOOT_OVERLOAD) series devices specified kernel
+#                     [ 6.x.y  ] = [ stable/6.x.y  ] : used for all devices, Rockchip rk3399/rk3568 series devices specified kernel
 # When building the Armbian firmware, find [ the first ] configuration information with the [ same BOARD name ] and [ BUILD as yes ]
 # In [ armbian-install ], only the list of [ the same FAMILY ] is displayed by default
 # Description: https://github.com/ophub/amlogic-s9xxx-armbian/blob/main/build-armbian/documents/amlogic_model_database.md
@@ -196,6 +197,6 @@ r402    :L1-Pro                      :rk3328   :rk3328-l1pro-1296mhz.dtb        
 # 1.ID  2.MODEL                      3.SOC     4.FDTFILE                               5.UNUSED                      6.MAINLINE_UBOOT                     7.BOOTLOADER_IMG                 8.KERNEL_BRANCH  9.PLATFORM  10.FAMILY      11.BOOT_CONF     12.BOARD           13.BUILD
 #-------+----------------------------+---------+---------------------------------------+-----------------------------+------------------------------------+--------------------------------+----------------+-----------+--------------+----------------+------------------+-------
 w101    :Vplus-Cloud                 :h6       :sun50i-h6-vplus-cloud.dtb              :NA                           :NA                                  :u-boot-sunxi-with-spl.bin       :stable          :allwinner  :sun50i-h6     :armbianEnv.txt  :vplus             :yes
-w102    :TQC-A01                     :h6       :sun50i-h6-tqc-a01.dtb                  :NA                           :NA                                  :u-boot-sunxi-with-spl.bin       :5.10.y          :allwinner  :sun50i-h6     :extlinux.conf   :tqc-a01           :yes
+w102    :TQC-A01                     :h6       :sun50i-h6-tqc-a01.dtb                  :NA                           :NA                                  :u-boot-sunxi-with-spl.bin       :h6              :allwinner  :sun50i-h6     :extlinux.conf   :tqc-a01           :yes
 w103    :Tanix-TX6                   :h6       :sun50i-h6-tanix-tx6.dtb                :NA                           :NA                                  :u-boot-sunxi-with-spl.bin       :stable          :allwinner  :sun50i-h6     :extlinux.conf   :tanix-tx6         :yes
 
