Add Sumavision-Q5(s905) contributors

--- a/build-armbian/armbian-files/common-files/etc/model_database.conf
+++ b/build-armbian/armbian-files/common-files/etc/model_database.conf
@@ -57,7 +57,7 @@
 #-------+----------------------------+---------+---------------------------------------+-----------------------------+------------------------------------+--------------------------------+----------------+-----------+--------------+----------------+------------------+-------
 116     :CM311-1,HG680-LC,M401A      :s905l3   :meson-gxl-s905l2-x7-5g.dtb             :u-boot-p212.bin              :NA                                  :NA                              :stable          :amlogic    :meson-gxl     :uEnv.txt        :s905l3            :yes
 117     :E900V22E                    :s905l3b  :meson-gxl-s905l3b-e900v22e.dtb         :u-boot-s905x-s912.bin        :NA                                  :NA                              :stable          :amlogic    :meson-gxl     :uEnv.txt        :s905l3b           :no
-118     :BesTV-R3300L,Sumavision-Q7  :s905lb   :meson-gxl-s905x-p212.dtb               :u-boot-r3300l.bin            :r3300l-u-boot.bin.sd.bin            :NA                              :stable          :amlogic    :meson-gxl     :extlinux.conf   :s905lb-r3300l     :yes
+118     :BesTV-R3300L,SumaVision-Q7  :s905lb   :meson-gxl-s905x-p212.dtb               :u-boot-r3300l.bin            :r3300l-u-boot.bin.sd.bin            :NA                              :stable          :amlogic    :meson-gxl     :extlinux.conf   :s905lb-r3300l     :yes
 119     :X96W,FunTV,MXQ-Pro-4K       :s905w    :meson-gxl-s905w-x96w.dtb               :u-boot-s905x-s912.bin        :NA                                  :NA                              :stable          :amlogic    :meson-gxl     :uEnv.txt        :s905w             :no
 
 
@@ -155,8 +155,8 @@
 #-------+----------------------------+---------+---------------------------------------+-----------------------------+------------------------------------+--------------------------------+----------------+-----------+--------------+----------------+------------------+-------
 # 1.ID  2.MODEL                      3.SOC     4.FDTFILE                               5.UBOOT_OVERLOAD              6.MAINLINE_UBOOT                     7.BOOTLOADER_IMG                 8.KERNEL_BRANCH  9.PLATFORM  10.FAMILY      11.BOOT_CONF     12.BOARD           13.BUILD
 #-------+----------------------------+---------+---------------------------------------+-----------------------------+------------------------------------+--------------------------------+----------------+-----------+--------------+----------------+------------------+-------
-a01     :Beelink-Mini-MX-2G          :s905     :meson-gxbb-beelink-mini-mx.dtb         :u-boot-s905.bin              :NA                                  :NA                              :stable          :amlogic    :meson-gxbb    :uEnv.txt        :s905              :yes
-a02     :Sunvell-T95M                :s905     :meson-gxbb-p201.dtb                    :u-boot-s905.bin              :NA                                  :NA                              :stable          :amlogic    :meson-gxbb    :uEnv.txt        :s905              :no
+a01     :Beelink-Mini-MX-2G          :s905     :meson-gxbb-beelink-mini-mx.dtb         :u-boot-s905.bin              :NA                                  :NA                              :stable          :amlogic    :meson-gxbb    :uEnv.txt        :s905              :no
+a02     :Sunvell-T95M,SumaVision-Q5  :s905     :meson-gxbb-p201.dtb                    :u-boot-s905.bin              :NA                                  :NA                              :stable          :amlogic    :meson-gxbb    :extlinux.conf   :s905              :yes
 a03     :MXQ-Pro+                    :s905     :meson-gxbb-mxq-pro-plus.dtb            :u-boot-p201.bin              :NA                                  :NA                              :stable          :amlogic    :meson-gxbb    :uEnv.txt        :s905              :no
 
 
