Update Device List Link

--- a/build-armbian/armbian-files/common-files/etc/model_database.conf
+++ b/build-armbian/armbian-files/common-files/etc/model_database.conf
@@ -27,7 +27,6 @@
 #
 # When building the Armbian firmware, find [ the first ] configuration information with the [ same BOARD name ] and [ BUILD as yes ].
 # In [ armbian-install ], only the list of [ the same FAMILY ] is displayed by default.
-# Description: https://github.com/ophub/amlogic-s9xxx-armbian/blob/main/build-armbian/documents/amlogic_model_database.md
 #
 #=================================================================================================================================================================
 
@@ -137,7 +136,7 @@
 514     :X96-Air-1Gb                 :s905x3   :meson-sm1-x96-air-gbit.dtb             :u-boot-x96maxplus.bin        :NA                                  :NA                              :stable          :amlogic    :meson-sm1     :uEnv.txt        :s905x3-x96air-gb  :no
 515     :X96-Air,X96-Max+100W,100Mb  :s905x3   :meson-sm1-x96-air.dtb                  :u-boot-x96maxplus.bin        :NA                                  :NA                              :stable          :amlogic    :meson-sm1     :uEnv.txt        :s905x3-x96air     :no
 #-------+----------------------------+---------+---------------------------------------+-----------------------------+------------------------------------+--------------------------------+----------------+-----------+--------------+----------------+------------------+-------
-516     :X96-Air-Q1000               :s905x3   :meson-sm1-x96-max-plus-q2.dtb          :u-boot-x96maxplus.bin        :x96maxplus-u-boot.bin.sd.bin        :hk1box-bootloader.img           :stable          :amlogic    :meson-sm1     :uEnv.txt        :s905x3-x96air-q1k :no
+516     :X96-Air-Q1000               :s905x3   :meson-sm1-x96-max-plus-q2.dtb          :u-boot-x96maxplus.bin        :x96maxplus-u-boot.bin.sd.bin        :hk1box-bootloader.img           :stable          :amlogic    :meson-sm1     :uEnv.txt        :s905x3-q1000      :no
 517     :X96-Max+_100Mb              :s905x3   :meson-sm1-x96-max-plus-100m.dtb        :u-boot-x96maxplus.bin        :x96maxplus-u-boot.bin.sd.bin        :hk1box-bootloader.img           :stable          :amlogic    :meson-sm1     :uEnv.txt        :s905x3            :yes
 518     :X96-Max+_1GB                :s905x3   :meson-sm1-x96-max-plus.dtb             :u-boot-x96maxplus.bin        :x96maxplus-u-boot.bin.sd.bin        :hk1box-bootloader.img           :stable          :amlogic    :meson-sm1     :uEnv.txt        :s905x3-x96max     :no
 519     :X96-Max+(OverClock)         :s905x3   :meson-sm1-x96-max-plus-oc.dtb          :u-boot-x96maxplus.bin        :x96maxplus-u-boot.bin.sd.bin        :hk1box-bootloader.img           :stable          :amlogic    :meson-sm1     :uEnv.txt        :s905x3-x96max-oc  :no
