--- a/build-armbian/armbian-files/common-files/etc/model_database.conf
+++ b/build-armbian/armbian-files/common-files/etc/model_database.conf
@@ -14,16 +14,15 @@
 # 1.ID  2.MODEL  3.SOC  4.FDTFILE  5.UBOOT_OVERLOAD  6.MAINLINE_UBOOT  7.BOOTLOADER_IMG  8.KERNEL_BRANCH  9.PLATFORM  10.FAMILY  11.BOOT_CONF 12.BOARD  13.BUILD
 # [ Column 5 ]: called <UBOOT_OVERLOAD> in Amlogic, <TRUST_IMG> in Rockchip, Not used in Allwinner.
 #
-# [ 8.KERNEL_BRANCH ] is the directory name of https://github.com/ophub/kernel/tree/main/pub/
-#                     The [ kernel directory ], Start with the [ letter ], such as stable, rk3588, h6, etc.
-#                     The [ specified kernel ], Start with the [ number ], such as 5.15.y, 6.1.y, etc.
-#                     The [ specified kernel ] is downloaded from the [ stable ] directory.
-#                     [ rk3588 ] = [ rk3588/*      ] : used for Rockchip rk3588 series devices.
-#                     [ h6     ] = [ h6/*          ] : used for Allwinner h6 series devices.
-#                     [ stable ] = [ stable/*      ] : used for all devices.
-#                     [ 5.10.y ] = [ stable/5.10.y ] : used for all devices.
-#                     [ 5.15.y ] = [ stable/5.15.y ] : used for all devices, Amlogic (without UBOOT_OVERLOAD) series devices specified kernel.
-#                     [ 6.1.y  ] = [ stable/6.1.y  ] : used for all devices, Rockchip rk3399/rk3568 series devices specified kernel.
+# [ 8.KERNEL_BRANCH ] is the tags name suffix of https://github.com/ophub/kernel/releases
+#                     The [ kernel tags name ], Start with the [ kernel_ ], such as kernel_stable, kernel_rk3588, kernel_h6, etc.
+#                     The [ specified kernel ], Use the kernel version name, such as 5.15.y, 6.1.y, etc. downloaded from the [ kernel_stable ] tags.
+#                     [ rk3588 ] = [ kernel_rk3588/*      ] : used for Rockchip rk3588 series devices.
+#                     [ h6     ] = [ kernel_h6/*          ] : used for Allwinner h6 series devices.
+#                     [ stable ] = [ kernel_stable/*      ] : used for all devices.
+#                     [ 5.10.y ] = [ kernel_stable/5.10.y ] : used for all devices.
+#                     [ 5.15.y ] = [ kernel_stable/5.15.y ] : used for all devices, Amlogic (without UBOOT_OVERLOAD) series devices specified kernel.
+#                     [ 6.1.y  ] = [ kernel_stable/6.1.y  ] : used for all devices, Rockchip rk3399/rk3568 series devices specified kernel.
 #
 # When building the Armbian firmware, find [ the first ] configuration information with the [ same BOARD name ] and [ BUILD as yes ].
 # In [ armbian-install ], only the list of [ the same FAMILY ] is displayed by default.
