--- a/build-armbian/armbian-files/common-files/etc/model_database.conf
+++ b/build-armbian/armbian-files/common-files/etc/model_database.conf
@@ -16,7 +16,7 @@
 #
 # [ 8.KERNEL_TAGS ] is the tags name suffix of https://github.com/ophub/kernel/releases
 #                   The [ kernel tags name ], Start with the [ kernel_ ], such as kernel_stable, kernel_rk3588, kernel_h6, etc.
-#                   The [ specified kernel ], Use the kernel version name, such as 5.15.y, 6.1.y, etc. downloaded from the [ kernel_stable ] tags.
+#                   The [ specified kernel ], Use the kernel version number, such as 5.15.y, 6.1.y, etc. downloaded from the [ kernel_stable ] tags.
 #                   [ rk3588 ] = [ kernel_rk3588/*      ] : used for Rockchip rk3588 series devices.
 #                   [ h6     ] = [ kernel_h6/*          ] : used for Allwinner h6 series devices.
 #                   [ stable ] = [ kernel_stable/*      ] : used for all devices.
