--- a/build-armbian/armbian-files/common-files/etc/model_database.conf
+++ b/build-armbian/armbian-files/common-files/etc/model_database.conf
@@ -186,7 +186,7 @@ r301    :EAIDK-610                   :rk3399   :rk3399-eaidk-610.dtb            
 r302    :King3399                    :rk3399   :rk3399-king3399.dtb                    :trust.bin                    :u-boot.img                          :idbloader.bin                   :stable        :rockchip   :rk3399       :armbianEnv.txt  :king3399            :yes
 r303    :TN3399                      :rk3399   :rk3399-tn3399.dtb                      :trust.bin                    :u-boot.img                          :idbloader.bin                   :stable        :rockchip   :rk3399       :armbianEnv.txt  :tn3399              :yes
 r304    :Kylin3399                   :rk3399   :rk3399-kylin3399.dtb                   :trust.bin                    :u-boot.img                          :idbloader.bin                   :stable        :rockchip   :rk3399       :armbianEnv.txt  :kylin3399           :yes
-
+r305    :ZCube1 Max                  :rk3399   :rk3399-hugsun-zm.dtb                   :trust.bin                    :u-boot.img                          :idbloader.bin                   :stable        :rockchip   :rk3399       :armbianEnv.txt  :hugsun-zm           :yes
 
 # Rockchip RK3328 Family
 #-------+----------------------------+---------+---------------------------------------+-----------------------------+------------------------------------+--------------------------------+--------------+-----------+-------------+----------------+--------------------+-------
@@ -201,6 +201,5 @@ r402    :L1-Pro                      :rk3328   :rk3328-l1pro-1296mhz.dtb        
 # 1.ID  2.MODEL                      3.SOC     4.FDTFILE                               5.UNUSED                      6.MAINLINE_UBOOT                     7.BOOTLOADER_IMG                 8.KERNEL_TAGS  9.PLATFORM  10.FAMILY     11.BOOT_CONF     12.BOARD             13.BUILD
 #-------+----------------------------+---------+---------------------------------------+-----------------------------+------------------------------------+--------------------------------+--------------+-----------+-------------+----------------+--------------------+-------
 w101    :Vplus-Cloud                 :h6       :sun50i-h6-vplus-cloud.dtb              :NA                           :NA                                  :u-boot-sunxi-with-spl.bin       :stable        :allwinner  :sun50i-h6    :armbianEnv.txt  :vplus               :yes
-w102    :TQC-A01                     :h6       :sun50i-h6-tqc-a01.dtb                  :NA                           :NA                                  :u-boot-sunxi-with-spl.bin       :h6            :allwinner  :sun50i-h6    :extlinux.conf   :tqc-a01             :yes
-w103    :Tanix-TX6                   :h6       :sun50i-h6-tanix-tx6.dtb                :NA                           :NA                                  :u-boot-sunxi-with-spl.bin       :stable        :allwinner  :sun50i-h6    :extlinux.conf   :tanix-tx6           :yes
+w102    :Tanix-TX6                   :h6       :sun50i-h6-tanix-tx6.dtb                :NA                           :NA                                  :u-boot-sunxi-with-spl.bin       :stable        :allwinner  :sun50i-h6    :extlinux.conf   :tanix-tx6           :yes
 
