--- a/build-armbian/armbian-files/common-files/etc/model_database.conf
+++ b/build-armbian/armbian-files/common-files/etc/model_database.conf
@@ -186,7 +186,7 @@ r301    :EAIDK-610                   :rk3399   :rk3399-eaidk-610.dtb            
 r302    :King3399                    :rk3399   :rk3399-king3399.dtb                    :trust.bin                    :u-boot.img                          :idbloader.bin                   :stable        :rockchip   :rk3399       :armbianEnv.txt  :king3399            :yes
 r303    :TN3399                      :rk3399   :rk3399-tn3399.dtb                      :trust.bin                    :u-boot.img                          :idbloader.bin                   :stable        :rockchip   :rk3399       :armbianEnv.txt  :tn3399              :yes
 r304    :Kylin3399                   :rk3399   :rk3399-kylin3399.dtb                   :trust.bin                    :u-boot.img                          :idbloader.bin                   :stable        :rockchip   :rk3399       :armbianEnv.txt  :kylin3399           :yes
-r305    :ZCube1 Max                  :rk3399   :rk3399-hugsun-zm.dtb                   :trust.bin                    :u-boot.img                          :idbloader.bin                   :stable        :rockchip   :rk3399       :armbianEnv.txt  :hugsun-zm           :yes
+r305    :ZCube1-Max                  :rk3399   :rk3399-hugsun-zm.dtb                   :trust.bin                    :u-boot.img                          :idbloader.bin                   :stable        :rockchip   :rk3399       :armbianEnv.txt  :hugsun-zm           :yes
 
 # Rockchip RK3328 Family
 #-------+----------------------------+---------+---------------------------------------+-----------------------------+------------------------------------+--------------------------------+--------------+-----------+-------------+----------------+--------------------+-------
