--- a/build-armbian/armbian-files/common-files/etc/model_database.conf
+++ b/build-armbian/armbian-files/common-files/etc/model_database.conf
@@ -15,10 +15,9 @@
 # [ Column 5 ]: called <UBOOT_OVERLOAD> in Amlogic, <TRUST_IMG> in Rockchip, Not used in Allwinner.
 #
 # [ 8.KERNEL_TAGS ] is the tags name suffix of https://github.com/ophub/kernel/releases
-#                   The [ kernel tags name ], Start with the [ kernel_ ], such as kernel_stable, kernel_rk3588, kernel_h6, etc.
+#                   The [ kernel tags name ], Start with the [ kernel_ ], such as kernel_stable, kernel_rk3588, etc.
 #                   The [ specified kernel ], Use the kernel version number, such as 5.15.y, 6.1.y, etc. downloaded from the [ kernel_stable ] tags.
 #                   [ rk3588 ] = [ kernel_rk3588/*      ] : used for Rockchip rk3588 series devices.
-#                   [ h6     ] = [ kernel_h6/*          ] : used for Allwinner h6 series devices.
 #                   [ stable ] = [ kernel_stable/*      ] : used for all devices.
 #                   [ 5.10.y ] = [ kernel_stable/5.10.y ] : used for all devices.
 #                   [ 5.15.y ] = [ kernel_stable/5.15.y ] : used for all devices, Amlogic (without UBOOT_OVERLOAD) series devices specified kernel.
