--- a/.github/workflows/rebuild-armbian.yml
+++ b/.github/workflows/rebuild-armbian.yml
@@ -81,6 +81,10 @@ on:
         description: "Set the kernel repository."
         required: false
         default: "ophub/kernel"
+        type: choice
+        options:
+          - ophub/kernel
+          - breakings/OpenWrt
       armbian_size:
         description: "Set armbian rootfs size(Unit: MiB)."
         required: false
