armbian-software: Add Chatgpt-web(docker)

--- a/build-armbian/armbian-files/common-files/usr/share/ophub/armbian-software/software-list.conf
+++ b/build-armbian/armbian-files/common-files/usr/share/ophub/armbian-software/software-list.conf
@@ -45,6 +45,8 @@
 122        :Navidrome          :docker@navidrome         :command-docker.sh      :jammy@focal@bullseye
 123        :Alist              :docker@alist             :command-docker.sh      :jammy@focal@bullseye
 124        :QingLong           :docker@qinglong          :command-docker.sh      :jammy@focal@bullseye
+125        :Chatgpt-Web        :docker@chatgpt-web       :command-docker.sh      :jammy@focal@bullseye
+#----------+-------------------+-------------------------+-----------------------+---------------------
 
 
 # 2xx for desktop
