Add crrc(rk3399) support

--- a/.github/workflows/build-armbian.yml
+++ b/.github/workflows/build-armbian.yml
@@ -60,6 +60,7 @@ on:
           - tn3399
           - kylin3399
           - hugsun-zm
+          - crrc
           - beikeyun
           - l1pro
           - vplus
