--- a/.github/workflows/rebuild-armbian.yml
+++ b/.github/workflows/rebuild-armbian.yml
@@ -54,6 +54,7 @@ on:
           - tn3399
           - kylin3399
           - hugsun-zm
+          - crrc
           - beikeyun
           - l1pro
           - vplus
