--- a/.github/workflows/use-releases-file-to-build.yml
+++ b/.github/workflows/use-releases-file-to-build.yml
@@ -60,6 +60,7 @@ on:
           - tn3399
           - kylin3399
           - hugsun-zm
+          - crrc
           - beikeyun
           - l1pro
           - vplus
