Add UNT400G1(s905l3) support

--- a/build-armbian/armbian-files/common-files/etc/model_database.conf
+++ b/build-armbian/armbian-files/common-files/etc/model_database.conf
@@ -59,6 +59,7 @@
 119     :X96W,FunTV,MXQ-Pro-4K       :s905w    :meson-gxl-s905w-x96w.dtb               :u-boot-s905x-s912.bin        :NA                                  :NA                              :2GB-RAM,16GB-ROM,100Mb-Nic,AP6255-wifi/BT  :stable        :amlogic     :meson-gxl    :uEnv.txt        :s905w-x96w          :no
 120     :E900V22D                    :s905l3b  :meson-gxl-s905l2-x7-5g.dtb             :u-boot-s905x-s912.bin        :NA                                  :NA                              :2+8G,100Mb-Nic                             :stable        :amlogic     :meson-gxl    :uEnv.txt        :s905l3b-e900v22d    :no
 #-------+----------------------------+---------+---------------------------------------+-----------------------------+------------------------------------+--------------------------------+-------------------------------------------+--------------+------------+-------------+----------------+--------------------+-------
+121     :UNT400G1                    :s905l3   :meson-gxl-s905l2-x7-5g.dtb             :u-boot-p212.bin              :NA                                  :NA                              :2+8G,100Mb-Nic                             :stable        :amlogic     :meson-gxl    :extlinux.conf   :s905l3-unt400g1     :yes
 
 
 # Amlogic GXM Family
