--- a/.github/workflows/build-armbian.yml
+++ b/.github/workflows/build-armbian.yml
@@ -44,6 +44,7 @@ on:
           - s905
           - s905l2
           - s905l3
+          - s905l3-unt400g1
           - s905l3a
           - s905l3b
           - s905lb-r3300l
