--- a/.github/workflows/rebuild-armbian.yml
+++ b/.github/workflows/rebuild-armbian.yml
@@ -38,8 +38,11 @@ on:
           - s905x
           - s905w
           - s905
-          - s905l3a
           - s905l2
+          - s905l3
+          - s905l3-unt400g1
+          - s905l3a
+          - s905l3b
           - s905lb-r3300l
           - rock5b
           - h88k
