Add support for photonicat (rk3568), use unifreq's resources

--- a/.github/workflows/build-armbian.yml
+++ b/.github/workflows/build-armbian.yml
@@ -105,6 +105,7 @@ on:
           - h68k
           - e25
           - nanopi-r5s
+          - photonicat
           - eaidk-610
           - king3399
           - tn3399
