--- a/.github/workflows/rebuild-armbian.yml
+++ b/.github/workflows/rebuild-armbian.yml
@@ -101,6 +101,7 @@ on:
           - h68k
           - e25
           - nanopi-r5s
+          - photonicat
           - eaidk-610
           - king3399
           - tn3399
