--- a/.github/workflows/use-releases-file-to-build.yml
+++ b/.github/workflows/use-releases-file-to-build.yml
@@ -105,6 +105,7 @@ on:
           - h68k
           - e25
           - nanopi-r5s
+          - photonicat
           - eaidk-610
           - king3399
           - tn3399
