--- a/build-armbian/armbian-files/common-files/etc/model_database.conf
+++ b/build-armbian/armbian-files/common-files/etc/model_database.conf
@@ -197,6 +197,9 @@ r304    :Kylin3399                     :rk3399   :rk3399-kylin3399.dtb          
 r305    :ZCube1-Max                    :rk3399   :rk3399-hugsun-zm.dtb                   :trust.bin                    :u-boot.img                          :idbloader.bin                   :2GB-DDR3,16G-eMMC,1Gb-Nic                  :stable        :rockchip    :rk3399       :armbianEnv.txt  :hugsun-zm           :yes
 #-------+------------------------------+---------+---------------------------------------+-----------------------------+------------------------------------+--------------------------------+-------------------------------------------+--------------+------------+-------------+----------------+--------------------+-------
 r306    :CRRC                          :rk3399   :rk3399-crrc.dtb                        :trust.bin                    :u-boot.img                          :idbloader.bin                   :2GB-DDR3,16G-eMMC,1Gb-Nic                  :6.1.y         :rockchip    :rk3399       :armbianEnv.txt  :crrc                :yes
+#-------+------------------------------+---------+---------------------------------------+-----------------------------+------------------------------------+--------------------------------+-------------------------------------------+--------------+------------+-------------+----------------+--------------------+-------
+r307    :S339am                        :rk3399   :rk3399-s339am.dtb                      :trust.bin                    :u-boot.img                          :idbloader.bin                   :4GB-DDR3,32G-eMMC,1Gb-Nic,WIFI/BT(AP6212)  :6.1.y         :rockchip    :rk3399       :armbianEnv.txt  :s339am              :yes
+
 
 
 # Rockchip RK3328 Family
