Add smart-am40(rk3399) support

--- a/.github/workflows/build-armbian.yml
+++ b/.github/workflows/build-armbian.yml
@@ -112,6 +112,7 @@ on:
           - kylin3399
           - hugsun-zm
           - crrc
+          - smart-am40
           - beikeyun
           - l1pro
           - station-m1
