--- a/.github/workflows/rebuild-armbian.yml
+++ b/.github/workflows/rebuild-armbian.yml
@@ -108,6 +108,7 @@ on:
           - kylin3399
           - hugsun-zm
           - crrc
+          - smart-am40
           - beikeyun
           - l1pro
           - station-m1
