--- a/.github/workflows/use-releases-file-to-build.yml
+++ b/.github/workflows/use-releases-file-to-build.yml
@@ -112,6 +112,7 @@ on:
           - kylin3399
           - hugsun-zm
           - crrc
+          - smart-am40
           - beikeyun
           - l1pro
           - station-m1
