Add sw799(rk3399) support

--- a/build-armbian/armbian-files/common-files/etc/model_database.conf
+++ b/build-armbian/armbian-files/common-files/etc/model_database.conf
@@ -199,6 +199,7 @@ r305    :ZCube1-Max                    :rk3399   :rk3399-hugsun-zm.dtb          
 #-------+------------------------------+---------+---------------------------------------+-----------------------------+------------------------------------+--------------------------------+-------------------------------------------+--------------+------------+-------------+----------------+--------------------+-------
 r306    :CRRC                          :rk3399   :rk3399-crrc.dtb                        :trust.bin                    :u-boot.img                          :idbloader.bin                   :2GB-DDR3,16G-eMMC,1Gb-Nic                  :6.1.y         :rockchip    :rk3399       :armbianEnv.txt  :crrc                :yes
 r307    :SMART-AM40                    :rk3399   :rk3399-smart-am40.dtb                  :trust.bin                    :u-boot.img                          :idbloader.bin                   :4GB-DDR3,32G-eMMC,1Gb-Nic                  :6.1.y         :rockchip    :rk3399       :armbianEnv.txt  :smart-am40          :yes
+r308    :SW799                         :rk3399   :rk3399-bozz-sw799.dtb                  :trust.bin                    :u-boot.img                          :idbloader.bin                   :4GB-DDR3,16G-eMMC,1Gb-Nic                  :6.1.y         :rockchip    :rk3399       :armbianEnv.txt  :sw799               :yes
 
 
 # Rockchip RK3328 Family
