Add Panther-X2(rk3566) support

--- a/.github/workflows/build-armbian.yml
+++ b/.github/workflows/build-armbian.yml
@@ -106,6 +106,7 @@ on:
           - h68k
           - e25
           - nanopi-r5s
+          - panther-x2
           - eaidk-610
           - king3399
           - tn3399
