--- a/.github/workflows/use-releases-file-to-build.yml
+++ b/.github/workflows/use-releases-file-to-build.yml
@@ -106,6 +106,7 @@ on:
           - h68k
           - e25
           - nanopi-r5s
+          - panther-x2
           - eaidk-610
           - king3399
           - tn3399
