Add zysj(rk3399) support

--- a/.github/workflows/rebuild-armbian.yml
+++ b/.github/workflows/rebuild-armbian.yml
@@ -111,6 +111,7 @@ on:
           - crrc
           - smart-am40
           - sw799
+          - zysj
           - beikeyun
           - l1pro
           - station-m1
