--- a/.github/workflows/build-armbian.yml
+++ b/.github/workflows/build-armbian.yml
@@ -115,6 +115,7 @@ on:
           - crrc
           - smart-am40
           - sw799
+          - zysj
           - beikeyun
           - l1pro
           - station-m1
