--- a/.github/workflows/rebuild-armbian.yml
+++ b/.github/workflows/rebuild-armbian.yml
@@ -163,13 +163,13 @@ on:
           - dev
           - beta
       armbian_storage:
-        description: "Select Armbian image storage time."
+        description: "Select image storage type."
         required: false
-        default: "lts"
+        default: "save"
         type: choice
         options:
-          - lts
-          - tmp
+          - save
+          - temp
 
 env:
   TZ: America/New_York
