--- a/action.yml
+++ b/action.yml
@@ -76,7 +76,7 @@ inputs:
   kernel_config:
     description: "Set the path of kernel .config"
     required: false
-    default: ""
+    default: "false"
   kernel_patch:
     description: "Set the directory for kernel patches"
     required: false
@@ -164,7 +164,7 @@ runs:
             config_filepath="compile-kernel/tools/config"
             kernel_outpath="compile-kernel/output"
             [[ -d "${config_filepath}" ]] || mkdir -p ${config_filepath}
-            if [[ -n "${{ inputs.kernel_config }}" ]]; then
+            if [[ -n "${{ inputs.kernel_config }}" && "${{ inputs.kernel_config }}" != "false" ]]; then
                 if [[ "$(ls ${GITHUB_WORKSPACE}/${{ inputs.kernel_config }}/config-* -l 2>/dev/null | grep "^-" | wc -l)" -ne "0" ]]; then
                     echo -e "Use a custom kernel compilation template..."
                     rm -f ${config_filepath}/* 2>/dev/null && sync
