Add kernel_bsta tags option for Actions

--- a/.github/workflows/use-releases-file-to-build.yml
+++ b/.github/workflows/use-releases-file-to-build.yml
@@ -167,6 +167,7 @@ on:
           - stable
           - flippy
           - dev
+          - beta
       armbian_storage:
         description: "Select image storage type."
         required: false
