format the newer line

--- a/build-armbian/armbian-files/common-files/etc/model_database.conf
+++ b/build-armbian/armbian-files/common-files/etc/model_database.conf
@@ -65,7 +65,8 @@
 122     :IP103H,TY1608                 :s905l3b  :meson-gxl-s905l3b-m302a.dtb            :u-boot-s905x-s912.bin        :NA                                  :NA                              :2+8G,100Mb-Nic                             :stable        :amlogic     :meson-gxl    :uEnv.txt        :s905l3b-ip103h      :no
 123     :BesTV-R3300L,SumaVision-Q7    :s905lb   :meson-gxl-s905x-p212.dtb               :u-boot-r3300l.bin            :r3300l-u-boot.bin.sd.bin            :NA                              :2+8G,100Mb-Nic                             :stable        :amlogic     :meson-gxl    :extlinux.conf   :s905lb-r3300l       :yes
 124     :Q96-mini                      :s905lb   :meson-gxl-s905x-p212.dtb               :u-boot-s905x-s912.bin        :NA                                  :NA                              :1G/8G,100Mb-Nic                            :stable        :amlogic     :meson-gxl    :uEnv.txt        :s905lb-q96-mini     :no
-125     :UNT402A			:s905l	:meson-gxl-s905l3b-m302a.dtb            :u-boot-p212.bin        :NA                                  :NA                              :2+8G,100Mb-Nic                             :stable        :amlogic     :meson-gxl    :uEnv.txt        :s905l             :yes
+125     :UNT402A                       :s905l    :meson-gxl-s905l3b-m302a.dtb            :u-boot-p212.bin              :NA                                  :NA                              :2+8G,100Mb-Nic                             :stable        :amlogic     :meson-gxl    :uEnv.txt        :s905l-unt402A       :yes
+
 
 # Amlogic GXM Family
 #-------+------------------------------+---------+---------------------------------------+-----------------------------+------------------------------------+--------------------------------+-------------------------------------------+--------------+------------+-------------+----------------+--------------------+----------
