--- a/build-armbian/armbian-files/common-files/etc/model_database.conf
+++ b/build-armbian/armbian-files/common-files/etc/model_database.conf
@@ -1,4 +1,4 @@
-#============================================================================================================================================================
+#==============================================================================================================================================================
 #
 # This file is licensed under the terms of the GNU General Public
 # License version 2. This program is licensed "as is" without any
@@ -11,25 +11,26 @@
 # Function: Define the list of supported devices
 #
 # 1.ID  2.MODEL  3.SOC  4.FDTFILE  5.UBOOT_OVERLOAD  6.MAINLINE_UBOOT  7.BOOTLOADER_IMG  8.DESCRIPTION
-# 9.KERNEL_TAGS  10.PLATFORM  11.FAMILY  12.BOOT_CONF  13.BOARD  14.BUILD
-# [ Column 5 ]: called <UBOOT_OVERLOAD> in Amlogic, <TRUST_IMG> in Rockchip, Not used in Allwinner.
+# 9.KERNEL_TAGS  10.PLATFORM  11.FAMILY  12.BOOT_CONF  13.CONTRIBUTORS  14.BOARD  15.BUILD
 #
-# [ 9.KERNEL_TAGS ] is the tags name suffix of https://github.com/ophub/kernel/releases
-#                   The [ kernel tags name ], Start with the [ kernel_ ], such as kernel_stable, kernel_rk3588, etc.
-#                   The [ common kernel ] includes [ kernel_stable, kernel_flippy, kernel_dev and kernel_beta ], can be used interchangeably.
-#                   The [ specific kernel ], Use the kernel version number, such as 5.15.y, 6.1.y, etc. downloaded from [ kernel_stable ] tags by default.
-#                   [ stable ] = [ kernel_stable/*      ] : used for all devices.
-#                   [ 5.15.y ] = [ kernel_stable/5.15.y ] : used for all devices, Amlogic (without UBOOT_OVERLOAD) series devices specified kernel.
-#                   [ 6.1.y  ] = [ kernel_stable/6.1.y  ] : used for all devices, Rockchip rk3399/rk3568 series devices specified kernel.
-#                   [ flippy ] = [ kernel_flippy/*      ] : used for all devices.
-#                   [ dev    ] = [ kernel_dev/*         ] : used for all devices.
-#                   [ beta   ] = [ kernel_beta/*        ] : used for all devices.
-#                   [ rk3588 ] = [ kernel_rk3588/*      ] : used for Rockchip rk3588 series devices.
+# [ 5.UBOOT_OVERLOAD ] : Called <UBOOT_OVERLOAD> in Amlogic, <TRUST_IMG> in Rockchip, Not used in Allwinner.
+# [ 9.KERNEL_TAGS    ] : The tags name suffix of https://github.com/ophub/kernel/releases
+#                        The [ kernel tags name ], Start with the [ kernel_ ], such as kernel_stable, kernel_rk3588, etc.
+#                        The [ common kernel ] includes [ kernel_stable, kernel_flippy, kernel_dev and kernel_beta ], can be used interchangeably.
+#                        The [ specific kernel ], Use the kernel version, such as 5.15.y, 6.1.y, etc. downloaded from [ kernel_stable ] tags by default.
+#                        [ stable ] = [ kernel_stable/*      ] : used for all devices.
+#                        [ 5.15.y ] = [ kernel_stable/5.15.y ] : used for all devices, Amlogic (without UBOOT_OVERLOAD) series devices specified kernel.
+#                        [ 6.1.y  ] = [ kernel_stable/6.1.y  ] : used for all devices, Rockchip rk3399/rk3568 series devices specified kernel.
+#                        [ flippy ] = [ kernel_flippy/*      ] : used for all devices.
+#                        [ dev    ] = [ kernel_dev/*         ] : used for all devices.
+#                        [ beta   ] = [ kernel_beta/*        ] : used for all devices.
+#                        [ rk3588 ] = [ kernel_rk3588/*      ] : used for Rockchip rk3588 series devices.
+# [ 13.CONTRIBUTORS  ] : Owner of https://github.com
 #
 # When [ -b all   ], it will look for [ <BUILD> value is yes ]
 # When [ -b board ], it will look for [ first row ] with [ same <BOARD> value ], ignore <BUILD> setting.
 #
-#============================================================================================================================================================
+#==============================================================================================================================================================
 
 # Amlogic GXL Family
 #-------+---------------------------------+---------+---------------------------------------+-----------------------------+------------------------------------+--------------------------------+-------------------------------------------+--------------+------------+-------------+----------------+--------------------------------------+--------------------+----------
@@ -60,6 +61,8 @@
 118     :CM211-1                          :s905l3   :meson-gxl-s905l3b-m302a.dtb            :u-boot-p212.bin              :NA                                  :NA                              :2+8G,100Mb-Nic                             :stable        :amlogic     :meson-gxl    :uEnv.txt        :Ivanriver                             :s905l3-cm211        :yes
 119     :M302A,M304A,CM211-1,CM311-1      :s905l3b  :meson-gxl-s905l3b-m302a.dtb            :u-boot-s905x-s912.bin        :NA                                  :NA                              :2+8G,100Mb-Nic                             :stable        :amlogic     :meson-gxl    :uEnv.txt        :janko888,God-JohnDiamond,peagsus      :s905l3b             :yes
 120     :E900V22E                         :s905l3b  :meson-gxl-s905l3b-e900v22e.dtb         :u-boot-s905x-s912.bin        :NA                                  :NA                              :2+8G,100Mb-Nic                             :stable        :amlogic     :meson-gxl    :uEnv.txt        :tuzhis                                :s905l3b-e900v22e    :no
+#-------+---------------------------------+---------+---------------------------------------+-----------------------------+------------------------------------+--------------------------------+-------------------------------------------+--------------+------------+-------------+----------------+--------------------------------------+--------------------+----------
+# 1.ID  2.MODEL                           3.SOC     4.FDTFILE                               5.UBOOT_OVERLOAD              6.MAINLINE_UBOOT                     7.BOOTLOADER_IMG                 8.DESCRIPTION                               9.KERNEL_TAGS  10.PLATFORM  11.FAMILY     12.BOOT_CONF     13.CONTRIBUTORS                        14.BOARD             15.BUILD
 #-------+---------------------------------+---------+---------------------------------------+-----------------------------+------------------------------------+--------------------------------+-------------------------------------------+--------------+------------+-------------+----------------+--------------------------------------+--------------------+----------
 121     :E900V22D                         :s905l3b  :meson-gxl-s905l2-x7-5g.dtb             :u-boot-s905x-s912.bin        :NA                                  :NA                              :2+8G,100Mb-Nic                             :stable        :amlogic     :meson-gxl    :uEnv.txt        :piaoliuchong                          :s905l3b-e900v22d    :no
 122     :IP103H,TY1608                    :s905l3b  :meson-gxl-s905l3b-m302a.dtb            :u-boot-s905x-s912.bin        :NA                                  :NA                              :2+8G,100Mb-Nic                             :stable        :amlogic     :meson-gxl    :uEnv.txt        :gbsadmin,Jeagarm                      :s905l3b-ip103h      :no
@@ -211,6 +214,8 @@ r407    :SMART-AM40                       :rk3399   :rk3399-smart-am40.dtb      
 r408    :SW799                            :rk3399   :rk3399-bozz-sw799.dtb                  :trust.bin                    :uboot.img                           :idbloader.bin                   :4GB-DDR3,16G-eMMC,1Gb-Nic                  :6.1.y         :rockchip    :rk3399       :armbianEnv.txt  :inoeud                                :sw799               :yes
 r409    :ZYSJ                             :rk3399   :rk3399-zysj.dtb                        :NA                           :u-boot.itb                          :idbloader.img                   :2GB/4GB-LPDDR3,8G/128G-eMMC,TF,1Gb-Nic     :6.1.y         :rockchip    :rk3399       :armbianEnv.txt  :GD2021                                :zysj                :yes
 r410    :DG-3399                          :rk3399   :rk3399-dg3399.dtb                      :trust.bin                    :uboot.img                           :idbloader.bin                   :2GB/4GB-DDR3,16G-eMMC,1Gb-Nic              :6.1.y         :rockchip    :rk3399       :armbianEnv.txt  :lauren12133                           :dg3399              :yes
+#-------+---------------------------------+---------+---------------------------------------+-----------------------------+------------------------------------+--------------------------------+-------------------------------------------+--------------+------------+-------------+----------------+--------------------------------------+--------------------+----------
+# 1.ID  2.MODEL                           3.SOC     4.FDTFILE                               5.UBOOT_OVERLOAD              6.MAINLINE_UBOOT                     7.BOOTLOADER_IMG                 8.DESCRIPTION                               9.KERNEL_TAGS  10.PLATFORM  11.FAMILY     12.BOOT_CONF     13.CONTRIBUTORS                        14.BOARD             15.BUILD
 #-------+---------------------------------+---------+---------------------------------------+-----------------------------+------------------------------------+--------------------------------+-------------------------------------------+--------------+------------+-------------+----------------+--------------------------------------+--------------------+----------
 r411    :Rocktech-mpc1903                 :rk3399   :rk3399-mpc1903.dtb                     :NA                           :u-boot.itb                          :idbloader.img                   :1GB/2GB/4GB-LPDDR3,16G-eMMC,TF,2x1Gb-Nic   :6.1.y         :rockchip    :rk3399       :armbianEnv.txt  :                                      :mpc1903             :no
 
