--- a/.github/workflows/rebuild-armbian.yml
+++ b/.github/workflows/rebuild-armbian.yml
@@ -171,7 +171,7 @@ on:
           - save
           - temp
       builder_name:
-        description: "Armbian builder's signature."
+        description: "Set Armbian builder signature."
         required: false
         default: "angel"
         type: choice
