--- a/.github/workflows/build-armbian.yml
+++ b/.github/workflows/build-armbian.yml
@@ -39,6 +39,7 @@ on:
           - smart-am40_station-m1_sw799_tn3399_vplus_zysj
           - s905d
           - s905d-ki-pro
+          - s905d-sml5442tw
           - s905x
           - s905x-tx9
           - s905x-t95
